--- a/ureport/templates/ureport/national_pulse_mock.html
+++ b/ureport/templates/ureport/national_pulse_mock.html
@@ -72,8 +72,8 @@
     var numberFormat = d3.format(".2f");
 
     var ugChart = dc.geoChoroplethChart("#ug-chart");
-		var totalsChart = dc.bubbleChart("#totals-chart");
-        var nationalPieChart = dc.pieChart("#national-pie-chart")
+    var totalsChart = dc.bubbleChart("#totals-chart");
+    var nationalPieChart = dc.pieChart("#national-pie-chart");
 
 		var width = 700,
 				height = 960;
